components/exo/keyboard.cc
@@ -4,12 +4,15 @@
 
 #include "components/exo/keyboard.h"
 
+#include "ash/public/cpp/app_types.h"
 #include "base/threading/thread_task_runner_handle.h"
 #include "components/exo/keyboard_delegate.h"
 #include "components/exo/keyboard_device_configuration_delegate.h"
 #include "components/exo/seat.h"
+#include "components/exo/shell_surface.h"
 #include "components/exo/surface.h"
 #include "components/exo/wm_helper.h"
+#include "ui/aura/client/aura_constants.h"
 #include "ui/aura/client/focus_client.h"
 #include "ui/aura/window.h"
 #include "ui/base/ime/input_method.h"
@@ -137,6 +140,20 @@ bool ProcessAcceleratorIfReserved(Surface* surface, ui::KeyEvent* event) {
   return IsReservedAccelerator(event) && ProcessAccelerator(surface, event);
 }
 
+// Returns true if surface belongs to an ARC application.
+// TODO(yhanada, https://crbug.com/847500): Remove this when we find a way
+// to fix https://crbug.com/847500 without breaking ARC++ apps.
+bool IsArcSurface(Surface* surface) {
+  aura::Window* window = surface->window();
+  for (; window; window = window->parent()) {
+    if (window->GetProperty(aura::client::kAppType) ==
+        static_cast<int>(ash::AppType::ARC_APP)) {
+      return true;
+    }
+  }
+  return false;
+}
+
 }  // namespace
 
 ////////////////////////////////////////////////////////////////////////////////
@@ -240,14 +257,24 @@ void Keyboard::OnKeyEvent(ui::KeyEvent* event) {
     delegate_->OnKeyboardModifiers(modifier_flags_);
   }
 
+  // TODO(yhanada): This is a quick fix for https://crbug.com/859071. Remove
+  // ARC-specific code path once we can find a way to manage press/release
+  // events pair for synthetic events.
+  ui::DomCode physical_code =
+      seat_->physical_code_for_currently_processing_event();
+  if (physical_code == ui::DomCode::NONE && focus_belongs_to_arc_app_) {
+    // This key event is a synthetic event.
+    // Consider DomCode field of the event as a physical code
+    // for synthetic events when focus surface belongs to an ARC application.
+    physical_code = event->code();
+  }
+
   switch (event->type()) {
     case ui::ET_KEY_PRESSED: {
       // Process key press event if not already handled and not already pressed.
-      auto it = pressed_keys_.find(
-          seat_->physical_code_for_currently_processing_event());
+      auto it = pressed_keys_.find(physical_code);
       if (it == pressed_keys_.end() && !consumed_by_ime && !event->handled() &&
-          seat_->physical_code_for_currently_processing_event() !=
-              ui::DomCode::NONE) {
+          physical_code != ui::DomCode::NONE) {
         uint32_t serial =
             delegate_->OnKeyboardKey(event->time_stamp(), event->code(), true);
         if (are_keyboard_key_acks_needed_) {
@@ -259,15 +286,12 @@ void Keyboard::OnKeyEvent(ui::KeyEvent* event) {
         }
         // Keep track of both the physical code and potentially re-written
         // code that this event generated.
-        pressed_keys_.insert(
-            {seat_->physical_code_for_currently_processing_event(),
-             event->code()});
+        pressed_keys_.insert({physical_code, event->code()});
       }
     } break;
     case ui::ET_KEY_RELEASED: {
       // Process key release event if currently pressed.
-      auto it = pressed_keys_.find(
-          seat_->physical_code_for_currently_processing_event());
+      auto it = pressed_keys_.find(physical_code);
       if (it != pressed_keys_.end()) {
         // We use the code that was generate when the physical key was
         // pressed rather than the current event code. This allows events
@@ -360,6 +384,7 @@ void Keyboard::SetFocus(Surface* surface) {
     delegate_->OnKeyboardEnter(surface, pressed_keys_);
     focus_ = surface;
     focus_->AddSurfaceObserver(this);
+    focus_belongs_to_arc_app_ = IsArcSurface(surface);
   }
 }
 
